added css and top container

--- a/Index.html
+++ b/Index.html
@@ -14,5 +14,11 @@
     <title>Ayush sahoo</title>
 </head>
 <body>
-    
+    <div class="top-container">
+        <img src="cloud.png" class="cloud-1" alt="">
+        <h1 class="title">I'm Ayush.</h1>
+        <h2 class="title">I'm a web developer</h2>
+        <img src="mountain.png" alt="" class="mountain">
+        <img src="cloud.png" class="cloud-2" alt="">
+      </div>  
 </body>
