--- a/Index.html
+++ b/Index.html
@@ -56,6 +56,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/poorab-patel-79a27b222/">LinkedIn</a>
         <a class="footer-link" href="https://www.instagram.com/_poorab__/">Instagram</a>
         <a class="footer-link" href="https://github.com/Poorab-202">Github</a>
-        <p style="font-size: xx-small; color: white;">© 2022 poorab patel @ web development.</p>
+        <p style="font-size: xx-small; color: white;">© 2022 ayush sahoo @ web development.</p>
     </div>
+    
 </body>
